# osurate

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: audio.rs  gui.rs  main.rs  util.rs
src/beatmap/: mod.rs  parser.rs
