[package]
name = "osurate"
version = "0.1.0"
authors = ["LunarCoffee <lunarcoffee.pjc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-floor", "interpolate-linear"] }
lame = "0.1.3"
minimp3 = "0.5.1"
