[package]
name = "osurate"
version = "0.2.0"
authors = ["LunarCoffee <lunarcoffee.pjc@gmail.com>"]
edition = "2018"

[features]
gui = ["druid"]

[dependencies]
clap = "2.33.3"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-floor", "interpolate-linear"] }
lame = "0.1.3"
minimp3 = "0.5.1"

druid = { version = "0.7.0", optional = true }
